@@ -1,23 +1,18 @@
 package Command.modelall.model;
 
 import Command.modelall.exceptions.InvalidDataException;
-import java.time.ZonedDateTime;
 
-/**
- * Класс Worker представляет работника.
- * Поля:
- * - id: значение > 0, уникально, генерируется автоматически.
- * - name: не может быть null или пустым.
- * - coordinates: объект Coordinates, не может быть null.
- * - creationDate: дата создания, не может быть null, генерируется автоматически.
- * - salary: не может быть null, > 0.
- * - position: объект Position, может быть null.
- * - status: объект Status, может быть null.
- * - person: объект Person, не может быть null.
- * Реализует сортировку по зарплате (сравнение по полю salary).
- */
-public class Worker implements Comparable<Worker> {
-    private static long idCounter = 1;
+import java.io.Serializable;
+import java.time.LocalDate;
+import java.time.ZonedDateTime;
+import java.util.Objects;
+import java.util.concurrent.atomic.AtomicLong;
+
+public class Worker implements Comparable<Worker>, Serializable {
+
+    private static final long serialVersionUID = 1L;
+    private static final AtomicLong ID_GEN = new AtomicLong(1);
+
     private final long id;
     private final String name;
     private final Coordinates coordinates;
@@ -28,20 +23,12 @@ public class Worker implements Comparable<Worker> {
     private final Person person;
 
     public Worker(String name, Coordinates coordinates, Double salary, Position position, Status status, Person person) throws InvalidDataException {
-        if (name == null || name.trim().isEmpty()) {
-            throw new InvalidDataException("Имя не может быть пустым");
-        }
-        if (coordinates == null) {
-            throw new InvalidDataException("Координаты не могут быть null");
-        }
-        if (salary == null || salary <= 0) {
-            throw new InvalidDataException("Зарплата должна быть больше 0");
-        }
-        if (person == null) {
-            throw new InvalidDataException("Person не может быть null");
-        }
+        if (name == null || name.isBlank()) throw new InvalidDataException("name пустой");
+        if (coordinates == null) throw new InvalidDataException("coords null");
+        if (salary == null || salary <= 0) throw new InvalidDataException("salary ≤ 0");
+        if (person == null) throw new InvalidDataException("person null");
 
-        this.id = idCounter++;
+        this.id = ID_GEN.getAndIncrement();
         this.name = name;
         this.coordinates = coordinates;
         this.creationDate = ZonedDateTime.now();
@@ -51,64 +38,46 @@ public class Worker implements Comparable<Worker> {
         this.person = person;
     }
 
-    @Override
-    public int compareTo(Worker other) {
-        return this.salary.compareTo(other.salary);
-    }
-
-    @Override
-    public String toString() {
-        return "Worker{id=" + id + ", name='" + name + "', coordinates=" + coordinates +
-                ", creationDate=" + creationDate + ", salary=" + salary +
-                ", position=" + position + ", status=" + status + ", person=" + person + "}";
-    }
-
-    public long getId() {
-        return id;
-    }
-
-    public Double getSalary() {
-        return salary;
-    }
-
-    public Position getPosition() {
-        return position;
-    }
-
+    // Метод для сериализации Worker в CSV
     public String toCSV() {
-        String positionStr = (position != null) ? position.name() : "";
-        String statusStr = (status != null) ? status.name() : "";
-
-        return id + "," +
-                name + "," +
+        String pos = (position != null) ? position.name() : "";  // Проверка на null для Position
+        String st  = (status != null) ? status.name() : "";   // Проверка на null для Status
+        return id + "," + name + "," +
                 coordinates.toCSV() + "," +
-                salary + "," +
-                positionStr + "," +
-                statusStr + "," +
+                salary + "," + pos + "," + st + "," +
                 person.toCSV();
     }
 
-
-    public static Worker fromCSV(String csv) throws InvalidDataException {
-        String[] parts = csv.split(",");
-        if (parts.length < 10) {
-            throw new InvalidDataException("Неверный формат CSV строки: " + csv);
+    // Метод для десериализации Worker из CSV
+    public static Worker fromCSV(String csv) throws Exception {
+        String[] f = csv.split(",", -1);
+        if (f.length < 10) {
+            throw new IllegalArgumentException("Ожидается 10 полей CSV");
         }
-        String name = parts[1];
-        Coordinates coordinates = Coordinates.fromCSV(parts[2] + "," + parts[3]);
-        Double salary = Double.parseDouble(parts[4]);
-        Position position = parts[5].isEmpty() ? null : Position.valueOf(parts[5]);
-        Status status = parts[6].isEmpty() ? null : Status.valueOf(parts[6]);
-        Person person = Person.fromCSV(parts[7] + "," + parts[8] + "," + parts[9]);
-        return new Worker(name, coordinates, salary, position, status, person);
+
+        String name = f[1].trim();
+        double x = Double.parseDouble(f[2].trim());
+        long y = Long.parseLong(f[3].trim());
+        double salary = Double.parseDouble(f[4].trim());
+        Position position = f[5].isEmpty() ? null : Position.valueOf(f[5].trim());
+        Status status = f[6].isEmpty() ? null : Status.valueOf(f[6].trim());
+        LocalDate birthday = LocalDate.parse(f[7].trim());
+        long height = Long.parseLong(f[8].trim());
+        int weight = Integer.parseInt(f[9].trim());
+
+        Coordinates coords = new Coordinates(x, y);
+        Person person = new Person(birthday, height, weight);
+
+        return new Worker(name, coords, salary, position, status, person);
     }
 
+    @Override public int compareTo(Worker o) { return salary.compareTo(o.salary); }
+    @Override public String toString() { return toCSV(); }
+    @Override public boolean equals(Object o) { return (this == o) || (o instanceof Worker w && id == w.id); }
+    @Override public int hashCode() { return Objects.hash(id); }
 
-    /** Метод нужен серверу, чтобы отдать Worker клиенту. */
-    public String toCsv() {
-        // Уже существует полноценный toCSV() – просто проксируем,
-        // чтобы не переписывать весь код.
-        return this.toCSV();
-    }
-
+    // Геттеры
+    public long getId() { return id; }
+    public Double getSalary() { return salary; }
+    public Position getPosition() { return position; }
 }
